--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "flowbite": "^1.6.3"
+        "@prettier/plugin-php": "^0.19.3",
+        "flowbite": "^1.6.3",
+        "prettier": "^2.8.4"
     }
 }
